Spaces between paragraphs added, text above scroll made bigger

--- a/product-1.html
+++ b/product-1.html
@@ -103,8 +103,8 @@
 		<p>Уяві, кансоль - гэта больш чым інтэрфейс. Кожная каманда ў шэле - гэта культура гіка і носьбіт каштоўнасцяў.</p>
 <h4><a href="https://github.com/svetit/2016-postcards-console" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 
-		<br>
-		<h3>Як прымяняць</h3>
+		
+		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Паштоўку можна адправіць сябру ці сяброўцы</li>
 			<li>Проста павесіць на сваёй сцяне</li>
