--- a/product-2.html
+++ b/product-2.html
@@ -99,7 +99,7 @@
 		<h3>Гісторыя і апісанне</h3>
                 <p>Паштоўкі з выявамі Беларусі, зробленыя супольнасцю вікіпедыстаў. Падчас розных конкурсаў, якія ладзяць супольнасць.  Добры падарунак сваякам, сябрам з розных гарадоў і мястэчак, а таксама замежжа.</p>		
 		<h4><a href="https://github.com/svetit/2016-postcards-wiki-commons" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3>Як прымяняць</h3>
+		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Адпраўце тым, хто яшчэ не ведае пра Вікіпедыю або толькі чуў. </li>
 			<li>Або ніколе не наведваў Беларусь. Хай памацаюць!</li>
@@ -108,7 +108,7 @@
 		
 		<p> Памер паштоўкі: А5 </p>
 
-		<p>* Замовіць тавар можна праз кантактную форму </p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
