--- a/product-3.html
+++ b/product-3.html
@@ -101,7 +101,7 @@
                 <p>Клёвыя паштоўкі ў падарунак гіку і гічке/гікаўне на беларускай мове.</p>
 		<p>Гэтыя паштоўкі адлюстроўваюць думкі гікаў. Як бачым, гэта сур'ёзныя пытанні для ўсяго грамадства.</p>
 		<h4><a href="https://github.com/svetit/2016-postcards-brand-experiment" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3>Як прымяняць</h3>
+		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Здзівіце сваю сяброўку або сябрука</li>
 			<li>Перадайце проста у рукі пры сустрэчы растлумачыўшы, чаму вам мэсыдж паштоўкі важны.</li>
@@ -110,7 +110,7 @@
 
 		<p> Памер паштоўкі: А5 </p>
 
-		<p>* Замовіць тавар можна праз кантактную форму </p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>	
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
