--- a/product-4.html
+++ b/product-4.html
@@ -100,16 +100,16 @@
                 <p>Налепкі-канструктар з выявамі ліцэнзіі Creative Commons на беларускай мове.</p>
 		<p>Гэты канструктар дае магчымасць лёгка растлумачыць усе віды ліцэнзіяў Creative Commons, а таскама прыцягнуць увагу да вашай індывідуальнасці</p>
 		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3>Як прымяняць</h3>
+		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Наляпіце на свой ноўтбук, ровар, мабільнік, тэчку з дакументамі або іншыя рэчы</li>
 			<li>Зрабіце з іх магніцікі</li>
 			<li>Падарыце сябрам, якія займаюцца творчасцю.</li>
 		</ul>
 
-		<p> Памер налепкі: 5,5см </p>
+		<p> Дыяметр налепкі: 5,5см </p>
 
-		<p>* Замовіць тавар можна праз кантактную форму </p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>	
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
