--- a/product-5.html
+++ b/product-5.html
@@ -102,7 +102,7 @@
 		<p>Слова гік і гіт вельмі сугучныя. git - гэта тэхналогія кантроля версіяў кода, які ствараецца супольнасцб праграмістаў. Але git можа быць прыменены і для графічных, і тэкставых і іншых файлаў.</p>
 		<p>Другое слова на налепцы, значыць, дзеянне гіка. Напрыклад, commit - гэта ўлучэнне кода ў рэпазіторый, а таксама магчымае пацверджаннне абавязку перад супольнасцю або камандай кодзераў.</p>
 		<h4><a href="https://github.com/diglabby/design/tree/master/sticker/stickers-2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3>Як прымяняць</h3>
+		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Наляпіце на свой ноўтбук, ровар, мабільнік, тэчку з дакументамі або іншыя рэчы</li>
 			<li>Зрабіце з іх магніцікі</li>
@@ -111,7 +111,7 @@
 
 		<p> Шырыня налепкі: 8см </p>
 
-		<p>* Замовіць тавар можна праз кантактную форму </p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
