--- a/product-6.html
+++ b/product-6.html
@@ -101,7 +101,7 @@
                 <p>Налепкі для адмінаў, сецівікоў і супольнасці за аўтаномны, незалежны інтэрнэт.</p>
 		<p>Яны ствараліся падчас нашых пілотных хапускаў мэш сеткі ў 2015 годзе. Але і зараз пасланне сугучны з каштоўнасямі якія нясуць дэцэнтралізаваныя тэхналогіі.</p>
 		<h4><a href="https://github.com/beMesh/stickers/tree/master/1" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3>Як прымяняць</h3>
+		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Наляпіце на свой ноўтбук, ровар, мабільнік, тэчку з дакументамі або іншыя рэчы</li>
 			<li>Зрабіце з іх магніцікі</li>
@@ -109,7 +109,7 @@
 		</ul>
 		<p> Памер налепкі: 5х5см </p>
 
-		<p>* Замовіць тавар можна праз кантактную форму </p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
             </div>
 
