--- a/product-7.html
+++ b/product-7.html
@@ -99,7 +99,7 @@
 		<h3>Гісторыя і апісанне</h3>
                 <p>Гэтыя налепкі мы стварылі падчас падрыхтоўкі брашуры "Дапаможнік Раварыста". Яны заклікаюць змяняць правілы. Добра падыходзяць, каб наляпіць на ноўтбук або ровар. Устойлівыя да вільгаці і трымаюцца на корпусе ноўта або роварнай раме.</p>
 		<h4><a href="https://github.com/rovar/dapamozhnik-2-stickers" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3>Як прымяняць:</h3>
+		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Наляпіце на свой ровар, сцену або іншыя прыдатныя для гэтага рэчы.</li>
 			<li>Зрабіце з іх магніцікі.</li>
@@ -108,7 +108,7 @@
 
 		<p> Шырыня налепкі: 15см </p>
 
-		<p>* Замовіць тавар можна праз кантактную форму </p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
