--- a/product-8.html
+++ b/product-8.html
@@ -100,14 +100,14 @@
 		<h3>Гісторыя і апісанне</h3>
                 <p>Класныя джутавыя гарадскія сумачкі для гіка з трафарэтамі ліцэнзій Creative Commons. З такімі сумачкамі можна хадзіць у краму, або проста пераносіць невялікія рэчы. Маем 4 розных колеры з надпісамі: "Хай будзе!", "За так", "Паўтарай!", "Не чапай!", "Спасылайся!"</p>
 		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3>Як прымяняць</h3>
+		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
 			<li>Хадзіць за прадуктамі</li>
 			<li>Пераносіць невялікія рэчы</li>
 			<li>Падарыце вашым сябрам, якія займаюцца творчай дзейнасцю.</li>
 		</ul>
 
-		<p>* Замовіць тавар можна праз кантактную форму </p>
+		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
             </div>
