--- a/tos.html
+++ b/tos.html
@@ -100,9 +100,9 @@
 <p>Мы хочам шчаслівых спажыўцоў.</p> 
 <p>Калі вы лічыце, што нешта вам не падыходзіць, мы гатовы памяняць тавар на іншы. Толькі скантактуйцеся з намі, і мы дапаможам вырашыць сітуацыю.</p>
 
-<h3>Частыя пытанні</h3>
+<h3 class="vodst-up-30">Частыя пытанні</h3>
 
-<h4>Ці магчыма атрымаць тавар у рэале? Так.</h4>
+<h4 class="vodst-up-30">Ці магчыма атрымаць тавар у рэале? Так.</h4>
 <ol>
         <li>Абірайце тавары.</li>
 	<li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
@@ -112,7 +112,7 @@
 	<li>Магчыма таксама дастаўка напрацягу 2-3 дзён праз кур'ера, кошт 4 рублі.</li>	
 </ol>
 
-<h4>Як атрымаць тавар праз пошту?</h4>
+<h4 class="vodst-up-30">Як атрымаць тавар праз пошту?</h4>
 <ol>
         <li>Абірайце тавары.</li>
         <li>Праз форму <a href="contact.html" target="_blank">"Звязацца з намі"</a> адпраўляеце сваю замову.</li>
@@ -121,13 +121,13 @@
         <li>Як толькі мы атрымліваем аплату, штотыдзень, у чацвер адпраўляем праз белпошту па абазначанаму вамі адрасу.</li>
 </ol>
 
-<h4>Якія спосабы аплаты вы маеце?</h4>
+<h4 class="vodst-up-30">Якія спосабы аплаты вы маеце?</h4>
 <ol>
         <li>Магчыма аплата наяўнымі пры атрыманні тавара,</li>
-        <li>або аллата праз картку пасля ўдакладанення замовы на пошце.</li>
+        <li>або аплата праз картку пасля ўдакладанення замовы па е-мейлу.</li>
 </ol>
 
-<h4>Колькі каштуе дастаўка па Беларусі?</h4>
+<h4 class="vodst-up-30">Колькі каштуе дастаўка па Беларусі?</h4>
 <p>Мы карыстаемся паслугамі <a href="http://www.belpost.by/tariff/belarus/yurrlica/" target="_blank">Белпошты</a> Кошты:</p>
 <ul>
         <li>да 100 гр. - 2 рублі</li>
@@ -135,7 +135,7 @@
 	<li>да 300 гр. - 4 рублі</li>
 </ul>
 
-<h4>Як аформіць замову?</h4>
+<h4 class="vodst-up-30">Як аформіць замову?</h4>
 <p>У поле "Паведамленне" на старонцы <a href="contact.html" target="_blank">"Звязацца з намі"</a> пазначце наступныя звесткі:</p>
 <ol>
         <li>дакладную назву тавара (*і нумар камплекта, які пазначаны на фота),</li>
@@ -144,16 +144,16 @@
 	<li>адрас (калі чакаеце атрымаць тавар па пошце).</li>
 </ol>
 
-<h4>Чаму колеры на друкаваных налепках адрозніваюцца ад колераў на макетах?</h4>
+<h4 class="vodst-up-30">Чаму колеры на друкаваных налепках адрозніваюцца ад колераў на макетах?</h4>
 <p>Такое можа здарацца, таму што мы ствараем макеты ў свабодных графічных прыладах, яны збольшага працуюць з RGB-гамай, а друк робіцца са CMYK-гамы.</p>
      
-<h4>Як стаць аўтарам?</h4>
+<h4 class="vodst-up-30">Як стаць аўтарам?</h4>
 <p>Мы пашыраем каманду лаўкі і гатовы размяшчаць дызайны новых аўтараў. Вось першыя крокі:</p>
 <ol>
         <li><a href="contact.html" target="_blank">Звязвайцеся</a> з намі. У паведамленні пакіньце спасылку на дызайн.</li>
 	<li>Важна ведаць, што нашы аўтары распаўсюджваюць сваю творчасць пад ліцэнзіяй <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">СС BY-SA 4.0</a></li>
 </ol>
-<h4>Засталіся пытанні?</h4> 
+<h4 class="vodst-up-30">Засталіся пытанні?</h4> 
 <p>Званіце на <a href="tel:+375298602312">+375 29 8602312</a>.</p>
 
         
