--- a/index.html
+++ b/index.html
@@ -225,6 +225,118 @@
 
         </div>        
 
+
+        <!-- Projects Row -->
+        <div class="row products">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">4 р</h3>
+                                <h3><a href="product-12.html">Значкі для гіка</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">    
+                    <a href="product-12.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
+		  
+		    <div class="text1"><p>4 руб.</p></div>
+                </div>
+
+            </div>
+
+
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">6 р</h3>
+                                <h3><a href="product-6.html">Мэш-налепкі</a>
+                                </h3>
+                </div>                
+
+
+                <div class="img-prod-container">
+                    <a href="product-6.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
+	            <div class="text1"><p>6 руб.</p></div>
+                </div>
+
+            </div>
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">8 р</h3>
+                                <h3><a href="product-9.html">Пірацкія плакаты</a>
+                                </h3>
+                </div>                
+
+
+                <div class="img-prod-container">
+                    <a href="product-9.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
+		    <div class="text1"><p>8 руб.</p></div>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+
+        <!-- Projects Row -->
+        <div class="row products">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">25 р</h3>
+                                <h3><a href="product-10.html">Цішотка для гіка</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">		    
+                    <a href="product-10.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
+		  
+		    <div class="text1"><p>25 руб.</p></div>
+                </div>
+
+            </div>
+
+
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">8 р</h3>
+                                <h3><a href="product-11.html">Плакаты ад Фур'е</a>
+                                </h3>
+                </div>                
+
+
+                <div class="img-prod-container">
+                    <a href="product-11.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
+	            <div class="text1"><p>8 руб.</p></div>
+                </div>
+
+            </div>
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
+                                <h3 class="pull-right">5 р</h3>
+                                <h3><a href="product-3.html">Паштоўкі ад Фур'е</a>
+                                </h3>
+                </div>                
+
+
+                <div class="img-prod-container">
+                    <a href="product-3.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
+		    <div class="text1"><p>5 руб.</p></div>
+                </div>
+
+            </div>
+
+        </div>
+        <!-- /.row -->
+
+
+
+
+
     </div>
     <!-- /.container -->
 
