added new descroption for goods

--- a/product-10.html
+++ b/product-10.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
 
-    <title>Гік-лаўка - Торбы Creative Commons</title>
+    <title>Гік-лаўка - Цішотка для гіка</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -77,8 +77,8 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">12 руб.</h1>
-                <h1 class="page-header">Торба Creative Commons
+		<h1 class="pull-right">25 руб.</h1>
+                <h1 class="page-header">Цішотка для гіка
 		<small>Адна штука</small>
                 </h1>
 </div>
@@ -98,15 +98,16 @@
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Класныя джутавыя гарадскія сумачкі для гіка з трафарэтамі ліцэнзій Creative Commons. З такімі сумачкамі можна хадзіць у краму, або проста пераносіць невялікія рэчы. Маем 4 розных колеры з надпісамі: "Хай будзе!", "За так", "Паўтарай!", "Не чапай!", "Спасылайся!"</p>
+                <p>Цішоткі гікаўскія - працяг нашых эксперыментаў з кансольлю. Зараз у калекцыі класічныя DIY-цішоткі чорнага або белага колеру з надпісамі "Geek commit_". </p>
+		<p>Самі надпісы нарадзіліся падчас нашай працы над айцішнымі праектамі і працай з тэзналогіяй git. Але пасля мы зразумелі, што гэтыя камиты, яны маюць таксама сацыяльнае - грамадскае значэнне. Бо код - гэта закон, а творчасць гікаў - гэта абавязак яго трымацца.</p>
 		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Хадзіць за прадуктамі</li>
-			<li>Пераносіць невялікія рэчы</li>
-			<li>Падарыце вашым сябрам, якія займаюцца творчай дзейнасцю.</li>
+			<li>Так лепей за ўсё прыглядзець для сябе паперчык і насіць да дыр</li>
+			<li>Павесіць на вешалку і чакаць лета</li>
+			<li>Дамаляваць нешта, што дадаць больш сэнса вашай індывідуальнасці, ці прыдумайце сваю гісторыю для "Geek commit_".</li>
 		</ul>
-
+		<p><strong>Памер цішоткі:</strong> пазначайце свой памер у замове </p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
