--- a/product-11.html
+++ b/product-11.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
 
-    <title>Гік-лаўка - Торбы Creative Commons</title>
+    <title>Гік-лаўка - Плакаты ад Фур'е</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -77,8 +77,8 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">12 руб.</h1>
-                <h1 class="page-header">Торба Creative Commons
+		<h1 class="pull-right">8 руб.</h1>
+                <h1 class="page-header">Плакаты ад Фур'е
 		<small>Адна штука</small>
                 </h1>
 </div>
@@ -98,14 +98,15 @@
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Класныя джутавыя гарадскія сумачкі для гіка з трафарэтамі ліцэнзій Creative Commons. З такімі сумачкамі можна хадзіць у краму, або проста пераносіць невялікія рэчы. Маем 4 розных колеры з надпісамі: "Хай будзе!", "За так", "Паўтарай!", "Не чапай!", "Спасылайся!"</p>
-		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+                <p>Гэта першы выпуск плакатаў каманды Фаланстэра. Кожны плакат - наша прызма ўспрымання свету і адлюстраванне нейкай каштоўнасці. Калі вы падзяляеце падобныя прынцыпы або паводзіны, значыць гэтыя плакаты для вас.</p>
+		<h4><a href="#" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Хадзіць за прадуктамі</li>
-			<li>Пераносіць невялікія рэчы</li>
-			<li>Падарыце вашым сябрам, якія займаюцца творчай дзейнасцю.</li>
+			<li>Павесіць на сцяну, або падкласці пад аргшкло працоўнага стала</li>
+			<li>Падарыць сябрам, якія падзяляюць агульныя погляды.</li>
+			<li>Расшарыць самы прыгожы плакат у сябе на сцяне са спасылкай на гік-лаўку.</li>
 		</ul>
+		<p><strong>Памер плаката:</strong> А2 </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
