--- a/product-12.html
+++ b/product-12.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
 
-    <title>Гік-лаўка - Торбы Creative Commons</title>
+    <title>Гік-лаўка - Значкі для гіка</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -77,9 +77,9 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">12 руб.</h1>
-                <h1 class="page-header">Торба Creative Commons
-		<small>Адна штука</small>
+		<h1 class="pull-right">4 руб.</h1>
+                <h1 class="page-header">Значкі для гіка
+		<small>Две штукі</small>
                 </h1>
 </div>
             </div>
@@ -98,14 +98,16 @@
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Класныя джутавыя гарадскія сумачкі для гіка з трафарэтамі ліцэнзій Creative Commons. З такімі сумачкамі можна хадзіць у краму, або проста пераносіць невялікія рэчы. Маем 4 розных колеры з надпісамі: "Хай будзе!", "За так", "Паўтарай!", "Не чапай!", "Спасылайся!"</p>
-		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+                <p>Гікі - гэта людзі, апантаныя пэўнай справай. Калі вы кінаман, камп'ютарны спецыяліст, заганяецеся па роварах, а магчыма прападаеце ў клубах гістарычнай рэканструкцыі, біялагічных доследам і проста выдзяляеце шмат свайго часу нейкай справе, вы - гік.</p> 
+<p>Гэтыя значкі для вас, вашых сябраў, знаёмых. У камплекце з 2х значкаў ёсць зялёныя і малінавыя варыянты, або камбінацыя тых і другіх.</p>
+		<h4><a href="#" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Хадзіць за прадуктамі</li>
-			<li>Пераносіць невялікія рэчы</li>
-			<li>Падарыце вашым сябрам, якія займаюцца творчай дзейнасцю.</li>
+			<li>Замацаваць на сумку, заплечнік</li>
+			<li>Падарыць сябру або сяброўцы-гіку.</li>
+			<li>Прычапіць на вопратку, напрыклад, свой худзі</li> 
 		</ul>
+		<p><strong>Памер значкі:</strong> ... </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
