--- a/product-3.html
+++ b/product-3.html
@@ -9,7 +9,7 @@
     <meta name="description" content="незвычайныя паштоўкі, нестандартныя паштоўкі, адметныя паштоўкі, унікальныя паштоўкі, беларускія паштоўкі, паштоўкі для айцішніка, для камп'ютаршчыка, для гіка, для нерда, паштоўкі адміну, паштоўкі праграмісту, паштоўкі студэнту, беларускія паштоўкі, на дзень народзінаў, на свята">
 
 
-    <title>Гік-лаўка - Эксперыментальныя паштоўкі</title>
+    <title>Гік-лаўка - Паштоўкі ад Фур'е</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
 
     <!-- Bootstrap Core CSS -->
@@ -78,9 +78,9 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">10 руб.</h1>
-                <h1 class="page-header">Эксперыментальныя паштоўкі 
-		<small>кошт за камплект (10 штук)</small>
+		<h1 class="pull-right">5 руб.</h1>
+                <h1 class="page-header">Паштоўкі ад Фур'е 
+		<small>кошт за камплект (5 штук)</small>
                 </h1>
 </div>
             </div>
@@ -99,16 +99,16 @@
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Клёвыя паштоўкі ў падарунак гіку і гічке/гікаўне на беларускай мове.</p>
-		<p>Гэтыя паштоўкі адлюстроўваюць думкі гікаў. Як бачым, гэта сур'ёзныя пытанні для ўсяго грамадства.</p>
+		<p>Гэтыя паштоўкі адлюстроўваюць думкі гікаў: выхад з матрыцы, дзяліцца - клапаціцца, эксперыментуй, уступай у рады Фур'е. Як бачым, гэта і дзёрзкія воклічы, і сур'ёзныя пытанні для ўсяго грамадства. У камплекце 5 паштовак</p>
 		<h4><a href="https://github.com/svetit/2016-postcards-brand-experiment" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Здзівіце сваю сяброўку або сябрука</li>
+			<li>Здзівіце сваю сяброўку або сябрука у любы дзень, або Дзень народзінаў</li>
 			<li>Перадайце проста у рукі пры сустрэчы растлумачыўшы, чаму вам мэсыдж паштоўкі важны.</li>
 			<li>Зладзьце сярод знаёмых конкурс або віктарыну і падарце лепшым такія пашкоўкі.</li>
 		</ul>
 
-		<p> Памер паштоўкі: А5 </p>
+		<p> <strong>Памер паштоўкі:</strong> А5 </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>	
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
