--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 						        <h3>Замаўляй!</h3>
 					</div>  
 			<div class="progress">
-			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 32%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-				32%
+			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 37%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+				37%
 			  </div>
 			</div>
                 </div>
@@ -226,7 +226,7 @@
         </div>        
 
 
-        <!-- Projects Row -->
+        <!-- Projects Row 
         <div class="row products">
 
             <div class="col-md-4 portfolio-item">
@@ -277,10 +277,10 @@
             </div>
 
         </div>
-        <!-- /.row -->
+         /.row -->
 
 
-        <!-- Projects Row -->
+        <!-- Projects Row 
         <div class="row products">
 
             <div class="col-md-4 portfolio-item">
@@ -331,7 +331,7 @@
             </div>
 
         </div>
-        <!-- /.row -->
+         /.row -->
 
 
 
