znachki added, progressbar  changed to 39%

--- a/product-12.html
+++ b/product-12.html
@@ -90,10 +90,11 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+                <p><img class="img-responsive" src="images/products/pr12/znachka_6.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr12/znachka_2.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr12/znachka_1.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr12/znachka_4.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr12/znachka_3.jpg" alt=""></p>
             </div>
 
             <div class="col-md-4">
@@ -107,7 +108,7 @@
 			<li>Падарыць сябру або сяброўцы-гіку.</li>
 			<li>Прычапіць на вопратку, напрыклад, свой худзі</li> 
 		</ul>
-		<p><strong>Памер значкі:</strong> ... </p>
+		<p><strong>Дыяметр значкі:</strong> 36мм </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
