--- a/product-5.html
+++ b/product-5.html
@@ -94,6 +94,7 @@
                 <p><img class="img-responsive" src="images/products/pr5/geek_commit_1.JPG" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr5/geek_commit_3.JPG" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr5/geek_commit_4.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr5/geek_commit_5.jpg" alt=""></p>
             </div>
 
             <div class="col-md-4">
