--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 						        <h3>Замаўляй!</h3>
 					</div>  
 			<div class="progress">
-			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 37%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-				37%
+			  <div class="progress-bar progress-bar-success" role="progressbar" style="width: 39%;" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+				39%
 			  </div>
 			</div>
                 </div>
@@ -226,7 +226,7 @@
         </div>        
 
 
-        <!-- Projects Row 
+        <!-- Projects Row -->
         <div class="row products">
 
             <div class="col-md-4 portfolio-item">
@@ -237,7 +237,7 @@
                 </div>                
 
                 <div class="img-prod-container">    
-                    <a href="product-12.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
+                    <a href="product-12.html"><img class="img-responsive" src="images/products/pr12/znachka_7.jpg" alt=""></a>
 		  
 		    <div class="text1"><p>4 руб.</p></div>
                 </div>
@@ -277,7 +277,7 @@
             </div>
 
         </div>
-         /.row -->
+        <!-- /.row --> 
 
 
         <!-- Projects Row 
