geek t-shirts photos added, one condole postcard photo added.

--- a/product-1.html
+++ b/product-1.html
@@ -92,6 +92,7 @@
             <div class="col-md-8">
                 <p><img class="img-responsive" src="images/products/pr1/console_post_1.JPG" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr1/console_post_4.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr1/console_post_6.jpg" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr1/console_post_2.JPG" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr1/console_post_3.JPG" alt=""></p>
             </div>
