--- a/product-10.html
+++ b/product-10.html
@@ -90,10 +90,10 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+                <p><img class="img-responsive" src="images/products/pr10/geek_shirt_3.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr10/geek_shirt_1.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr10/geek_shirt_5.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr10/geek_shirt_2.jpg" alt=""></p>
             </div>
 
             <div class="col-md-4">
@@ -103,8 +103,8 @@
 		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
-			<li>Так лепей за ўсё прыглядзець для сябе паперчык і насіць да дыр</li>
-			<li>Павесіць на вешалку і чакаць лета</li>
+			<li>Так лепей за ўсё: прыглядзець для сябе памерчык і насіць да дыр.</li>
+			<li>Павесіць на вешалку і чакаць лета.</li>
 			<li>Дамаляваць нешта, што дадаць больш сэнса вашай індывідуальнасці, ці прыдумайце сваю гісторыю для "Geek commit_".</li>
 		</ul>
 		<p><strong>Памер цішоткі:</strong> пазначайце свой памер у замове </p>
