--- a/index.html
+++ b/index.html
@@ -263,6 +263,29 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
+                                <h3 class="pull-right">25 р</h3>
+                                <h3><a href="product-10.html">Цішотка для гіка</a>
+                                </h3>
+                </div>                
+
+                <div class="img-prod-container">		    
+                    <a href="product-10.html"><img class="img-responsive" src="images/products/pr10/geek_shirt_4.jpg" alt=""></a>
+		  
+		    <div class="text1"><p>25 руб.</p></div>
+                </div>
+
+            </div>
+
+
+        </div>
+        <!-- /.row --> 
+
+
+        <!-- Projects Row 
+        <div class="row products">
+
+            <div class="col-md-4 portfolio-item">
+		<div class="caption">
                                 <h3 class="pull-right">8 р</h3>
                                 <h3><a href="product-9.html">Пірацкія плакаты</a>
                                 </h3>
@@ -275,29 +298,6 @@
                 </div>
 
             </div>
-
-        </div>
-        <!-- /.row --> 
-
-
-        <!-- Projects Row 
-        <div class="row products">
-
-            <div class="col-md-4 portfolio-item">
-		<div class="caption">
-                                <h3 class="pull-right">25 р</h3>
-                                <h3><a href="product-10.html">Цішотка для гіка</a>
-                                </h3>
-                </div>                
-
-                <div class="img-prod-container">		    
-                    <a href="product-10.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
-		  
-		    <div class="text1"><p>25 руб.</p></div>
-                </div>
-
-            </div>
-
 
 
             <div class="col-md-4 portfolio-item">
