bugs fixed, photoes added

--- a/product-11.html
+++ b/product-11.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">8 руб.</h1>
+		<h1 class="pull-right">12 руб.</h1>
                 <h1 class="page-header">Плакаты ад Фур'е
 		<small>Адна штука</small>
                 </h1>
@@ -90,10 +90,10 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+                <p><img class="img-responsive" src="images/products/pr11/f_poster_1.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr11/f_poster_5.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr11/f_poster_3.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr11/f_poster_4.jpg" alt=""></p>
             </div>
 
             <div class="col-md-4">
