--- a/product-2.html
+++ b/product-2.html
@@ -93,6 +93,8 @@
                 <p><img class="img-responsive" src="images/products/pr2/wiki_post_3.JPG" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr2/wiki_post_4.JPG" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr2/wiki_post_2.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr2/wiki_post_5.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr2/wiki_post_6.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4">
@@ -106,7 +108,7 @@
 			<li>Так не чакайце свята, проста адпраўляйце іх сёння сваім дзядулям, бабулям, цеткам, дзядзькам.  Дарыце ім больш гікаўскай культуры.</li>
 		</ul>
 		
-		<p> Памер паштоўкі: А5 </p>
+		<p> Памер паштоўкі: А6 </p>
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
