--- a/product-7.html
+++ b/product-7.html
@@ -93,6 +93,9 @@
                 <p><img class="img-responsive" src="images/products/pr7/rovar_1.jpg" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr7/rovar_2.jpg" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr7/rovar_4.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr7/rovar_6.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr7/rovar_7.JPG" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr7/rovar_8.JPG" alt=""></p>
             </div>
 
             <div class="col-md-4">
