--- a/product-10.html
+++ b/product-10.html
@@ -98,16 +98,16 @@
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Цішоткі гікаўскія - працяг нашых эксперыментаў з кансольлю. Зараз у калекцыі класічныя DIY-цішоткі чорнага або белага колеру з надпісамі "Geek commit_". </p>
-		<p>Самі надпісы нарадзіліся падчас нашай працы над айцішнымі праектамі і працай з тэзналогіяй git. Але пасля мы зразумелі, што гэтыя камиты, яны маюць таксама сацыяльнае - грамадскае значэнне. Бо код - гэта закон, а творчасць гікаў - гэта абавязак яго трымацца.</p>
-		<h4><a href="https://github.com/TastyCreativity/visual_art/tree/master/nalepki_2" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3 class="vodst-up-30">Як прымяняць</h3>
+                <p>Цішоткі гікаўскія - працяг нашых эксперыментаў з кансоллю. Зараз у калекцыі класічныя DIY-цішоткі чорнага або белага колеру з надпісамі "Geek commit_". </p>
+		<p>Самі надпісы нарадзіліся падчас нашай працы над айцішнымі праектамі і працай з тэзналогіяй git. Але пасля мы зразумелі, што гэтыя каміты маюць таксама сацыяльнае, грамадскае значэнне. Бо код - гэта закон, а творчасць гікаў - гэта абавязак яго трымацца.</p>
+		<h4><a href="https://github.com/diglabby/design/tree/master/t-shirts" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+		<h3 class="vodst-up-30">Як прымяняць:</h3>
 		<ul>
 			<li>Так лепей за ўсё: прыглядзець для сябе памерчык і насіць да дыр.</li>
 			<li>Павесіць на вешалку і чакаць лета.</li>
 			<li>Дамаляваць нешта, што дадаць больш сэнса вашай індывідуальнасці, ці прыдумайце сваю гісторыю для "Geek commit_".</li>
 		</ul>
-		<p><strong>Памер цішоткі:</strong> пазначайце свой памер у замове </p>
+		<p><strong>Памер цішоткі:</strong> пазначайце свой памер у замове. </p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
 
