--- a/product-11.html
+++ b/product-11.html
@@ -99,12 +99,12 @@
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
                 <p>Гэта першы выпуск плакатаў каманды Фаланстэра. Кожны плакат - наша прызма ўспрымання свету і адлюстраванне нейкай каштоўнасці. Калі вы падзяляеце падобныя прынцыпы або паводзіны, значыць гэтыя плакаты для вас.</p>
-		<h4><a href="#" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3 class="vodst-up-30">Як прымяняць</h3>
+		<h4><a href="https://github.com/svetit/2017-posters-brand-experiment" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+		<h3 class="vodst-up-30">Як прымяняць:</h3>
 		<ul>
-			<li>Павесіць на сцяну, або падкласці пад аргшкло працоўнага стала</li>
+			<li>Павесіць на сцяну, або падкласці пад аргшкло працоўнага стала.</li>
 			<li>Падарыць сябрам, якія падзяляюць агульныя погляды.</li>
-			<li>Расшарыць самы прыгожы плакат у сябе на сцяне са спасылкай на гік-лаўку.</li>
+			<li>Расшарыць самы прыгожы плакат у сябе на сцяне са спасылкай на Гік-лаўку.</li>
 		</ul>
 		<p><strong>Памер плаката:</strong> А2 </p>
 
