--- a/product-12.html
+++ b/product-12.html
@@ -99,14 +99,14 @@
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Гікі - гэта людзі, апантаныя пэўнай справай. Калі вы кінаман, камп'ютарны спецыяліст, заганяецеся па роварах, а магчыма прападаеце ў клубах гістарычнай рэканструкцыі, біялагічных доследам і проста выдзяляеце шмат свайго часу нейкай справе, вы - гік.</p> 
+                <p>Гікі - гэта людзі, апантаныя пэўнай справай. Калі вы кінаман, камп'ютарны спецыяліст, заганяецеся па роварах, а, магчыма, прападаеце ў клубах гістарычнай рэканструкцыі, біялагічных доследаў і проста выдзяляеце шмат свайго часу нейкай справе, вы - гік.</p> 
 <p>Гэтыя значкі для вас, вашых сябраў, знаёмых. У камплекце з 2х значкаў ёсць зялёныя і малінавыя варыянты, або камбінацыя тых і другіх.</p>
-		<h4><a href="#" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
-		<h3 class="vodst-up-30">Як прымяняць</h3>
+		<h4><a href="https://github.com/svetit/2017-signes/tree/master/geek" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
+		<h3 class="vodst-up-30">Як прымяняць:</h3>
 		<ul>
-			<li>Замацаваць на сумку, заплечнік</li>
+			<li>Замацаваць на сумку, заплечнік.</li>
 			<li>Падарыць сябру або сяброўцы-гіку.</li>
-			<li>Прычапіць на вопратку, напрыклад, свой худзі</li> 
+			<li>Прычапіць на вопратку, напрыклад, свой худзі.</li> 
 		</ul>
 		<p><strong>Дыяметр значкі:</strong> 36мм </p>
 
