work time changed

--- a/product-10.html
+++ b/product-10.html
@@ -105,7 +105,7 @@
 		<ul>
 			<li>Так лепей за ўсё: прыглядзець для сябе памерчык і насіць да дыр.</li>
 			<li>Павесіць на вешалку і чакаць лета.</li>
-			<li>Дамаляваць нешта, што дадаць больш сэнса вашай індывідуальнасці, ці прыдумайце сваю гісторыю для "Geek commit_".</li>
+			<li>Дамаляваць нешта, што дадаcць больш сэнса вашай індывідуальнасці, ці прыдумайце сваю гісторыю для "Geek commit_".</li>
 		</ul>
 		<p><strong>Памер цішоткі:</strong> пазначайце свой памер у замове. </p>
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
