--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
 Не бойцеся! Вы ў харошых руках.</p>
 <p>
 Кахай і гіч,
-<br />каманда Гік-лаўкі</p>
+<br />каманда Гік-лаўкі.</p>
             </div>
             <div class="col-md-6">
                 <img class="img-responsive" src="images/geek_lauka_loga_about.png" alt="">
