--- a/tos.html
+++ b/tos.html
@@ -154,7 +154,7 @@
 	<li>Важна ведаць, што нашы аўтары распаўсюджваюць сваю творчасць пад ліцэнзіяй <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">СС BY-SA 4.0</a></li>
 </ol>
 <h4 class="vodst-up-30">Засталіся пытанні?</h4> 
-<p>Званіце на <a href="tel:+375298602312">+375 29 8602312</a>.</p>
+<p>Тэлефануйце на <a href="tel:+375298602312">+375 29 8602312</a>.</p>
 
         
 
