a new serch words

--- a/product-11.html
+++ b/product-11.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
+    <meta name="description" content="плакаты, постэры, постеры па гік тэмам, фур'е, падарунак, подарок">
 
     <title>Гік-лаўка - Плакаты ад Фур'е</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
