--- a/product-10.html
+++ b/product-10.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
+    <meta name="description" content="цішотка, майка, саколка, гік, камміт, diy купіць мінск, майкі з прынтамі">
 
     <title>Гік-лаўка - Цішотка для гіка</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
