--- a/product-12.html
+++ b/product-12.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Сумачкі гарадскія, для прадуктаў, сумкі, з натуральнай тканіны, джут">
+    <meta name="description" content="значки, значкі, pins, geek girl, geek boy, зраби самастойна, гік">
 
     <title>Гік-лаўка - Значкі для гіка</title>
     <link rel="shortcut icon" type="image/png" href="images/geek_lauka_favicon.png"/>
