fix size for bags

--- a/product-8.html
+++ b/product-8.html
@@ -106,6 +106,8 @@
 			<li>Пераносіць невялікія рэчы</li>
 			<li>Падарыце вашым сябрам, якія займаюцца творчай дзейнасцю.</li>
 		</ul>
+		<p><strong>Памер торбы:</strong> 37х39 см</p>
+
 
 		<p class="vodst-up-30 vodst-down-30">* Замовіць тавар можна праз кантактную форму </p>
 		<a href="contact.html" class="btn btn-lg btn-default">Замовіць тавар</a>
