Изм оформления подписки

--- a/about.html
+++ b/about.html
@@ -128,21 +128,21 @@
                 <div class="col-lg-12">
 
 
-<form action="//falanster.us6.list-manage.com/subscribe/post?u=a85c8705ea30c06ccde479258&amp;id=19b97f6d12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" novalidate>
+<form action="//falanster.us6.list-manage.com/subscribe/post?u=a85c8705ea30c06ccde479258&amp;id=19b97f6d12" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate form-inline" target="_blank" > <!-- novalidate -->
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Email*</label>
-	<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email*">
+	<input type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL" placeholder="Email*" required>
     </div>
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Імя</label>
-	<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Імя">
+	<input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME" placeholder="Імя" pattern="[A-Za-zА-Яа-яЁё]{1,22}" title="Допустимы только русские и латинские символы, не более 20">
     </div>
 
     <div class="form-group input-group-lg">
         <label class="sr-only" for="inputEmail">Прозвішча</label>
-	<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME"  placeholder="Прозвішча">
+	<input type="text" value="" name="LNAME" class="form-control" id="mce-LNAME"  placeholder="Прозвішча" pattern="[A-Za-zА-Яа-яЁё]{1,22}" title="Допустимы только русские и латинские символы, не более 20">
     </div>
     <input type="submit" value="Падпісацца" name="subscribe" id="mc-embedded-subscribe" class="btn btn-lg btn-default">
 
