"В поле телефон можно использовать в качестве подсказки маску в виде +375()_"

--- a/contact.html
+++ b/contact.html
@@ -122,7 +122,7 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label for="phone">Нумар тэлефона</label>
-                                <input type="tel" class="form-control" placeholder="Нумар тэлефона" id="phone" required data-validation-required-message="калі ласка увядзіце нумар тэлефона.">
+                                <input type="tel" class="form-control" placeholder="+375()_" id="phone" required data-validation-required-message="калі ласка увядзіце нумар тэлефона.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
