--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
         <!-- /.row --> 
 
 
-        <!-- Projects Row 
+        <!-- Projects Row --> 
         <div class="row products">
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">5 р</h3>
+                                <h3 class="pull-right">10 р</h3>
                                 <h3><a href="product-3.html">Паштоўкі ад Фур'е</a>
                                 </h3>
                 </div>                
@@ -289,7 +289,7 @@
 
                 <div class="img-prod-container">
                     <a href="product-3.html"><img class="img-responsive" src="images/products/pr3/furie_post_cover.jpg" alt=""></a>
-		    <div class="text1"><p>5 руб.</p></div>
+		    <div class="text1"><p>10 руб.</p></div>
                 </div>
 
             </div>
@@ -297,15 +297,15 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">8 р</h3>
-                                <h3><a href="product-9.html">Пірацкія плакаты</a>
+                                <h3 class="pull-right">65 р</h3>
+                                <h3><a href="product-14.html">Пірацкія плакаты</a>
                                 </h3>
                 </div>                
 
 
                 <div class="img-prod-container">
-                    <a href="product-9.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
-		    <div class="text1"><p>8 руб.</p></div>
+                    <a href="product-14.html"><img class="img-responsive" src="images/products/pr14/hoody_invader_cover.jpg" alt=""></a>
+		    <div class="text1"><p>65 руб.</p></div>
                 </div>
 
             </div>
@@ -313,21 +313,21 @@
 
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
-                                <h3 class="pull-right">6 р</h3>
-                                <h3><a href="product-6.html">Мэш-налепкі</a>
+                                <h3 class="pull-right">35 р</h3>
+                                <h3><a href="product-13.html">Мэш-налепкі</a>
                                 </h3>
                 </div>                
 
 
                 <div class="img-prod-container">
-                    <a href="product-6.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
-	            <div class="text1"><p>6 руб.</p></div>
+                    <a href="product-13.html"><img class="img-responsive" src="images/products/pr13/space_invader_cover.jpg" alt=""></a>
+	            <div class="text1"><p>35 руб.</p></div>
                 </div>
 
             </div>           
 
         </div>
-         /.row -->
+       <!--  /.row -->
 
 
  	<!-- Projects Row 
