added 2 new products

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">65 р</h3>
-                                <h3><a href="product-14.html">Пірацкія плакаты</a>
+                                <h3><a href="product-14.html">Худзі Space Invader</a>
                                 </h3>
                 </div>                
 
@@ -314,7 +314,7 @@
             <div class="col-md-4 portfolio-item">
 		<div class="caption">
                                 <h3 class="pull-right">35 р</h3>
-                                <h3><a href="product-13.html">Мэш-налепкі</a>
+                                <h3><a href="product-13.html">DIY-цішоткі Space Invader</a>
                                 </h3>
                 </div>                
 
