new products added

--- a/product-9.html
+++ b/product-9.html
@@ -77,7 +77,7 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">8 руб.</h1>
+		<h1 class="pull-right">12 руб.</h1>
                 <h1 class="page-header">Пірацкія плакаты
 		<small>Адна штука</small>
                 </h1>
@@ -90,15 +90,16 @@
         <div class="row">
 
             <div class="col-md-8">
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr9/pi_poster_1.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr9/pi_poster_3.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr9/pi_poster_5.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr9/pi_poster_2.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr9/pi_poster_4.jpg" alt=""></p>
             </div>
 
             <div class="col-md-4">
 		<h3>Гісторыя і апісанне</h3>
-                <p>Ідэя пірацкіх плакатаў нарадзілася ў 2013 годзе, калі мы ўсвядомілі важнасць прыватнасці, свадобнага цыркулявання ведаў і іншыя выклікі у лічбавую эпоху. Выстава плакатаў абывалася на базе Фаланстэра, а таксама ў месцах правядзення мерапрыемстваў. Плакаты напоўнены рознымі слоганамі, як "Права - аўтару", "Чысці кэш браузера", "Пераможам - капірайт" і іншыя. Зараз вы можаце набыць сабе падобны плакат.</p>
+                <p>Ідэя пірацкіх плакатаў нарадзілася ў 2013 годзе, калі мы ўсвядомілі важнасць прыватнасці, свабоднага цыркулявання ведаў і іншыя выклікі у лічбавую эпоху. Выстава плакатаў абывалася на базе Фаланстэра, а таксама ў месцах правядзення мерапрыемстваў. Плакаты напоўнены рознымі слоганамі, як "Права - аўтару", "Чысці кэш браузера", "Пераможам - капірайт" і іншыя. Зараз вы можаце набыць сабе падобны плакат.</p>
 		<h4><a href="#" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>  Зыходнікі</a></h4>
 		<h3 class="vodst-up-30">Як прымяняць</h3>
 		<ul>
