--- a/product-6.html
+++ b/product-6.html
@@ -78,9 +78,9 @@
         <div class="row">
             <div class="col-lg-12">
 <div class="caption-product">
-		<h1 class="pull-right">6 руб.</h1>
+		<h1 class="pull-right">3 руб.</h1>
                 <h1 class="page-header">Мэш-налепкі 
-		<small>кошт за камплект (10 штук)</small>
+		<small>кошт за камплект (5 штук)</small>
                 </h1>
 </div>
             </div>
@@ -91,9 +91,13 @@
         <div class="row">
 
             <div class="col-md-8">
-                <p><img class="img-responsive" src="images/products/pr6/mesh_nalepki_1.jpg" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
-		<p><img class="img-responsive" src="http://placehold.it/750x500" alt=""></p>
+                <p><img class="img-responsive" src="images/products/pr6/mesh_1_1.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr6/mesh_2_2.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr6/mesh_nalepki_1.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr6/mesh_3.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr6/mesh_4.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr6/mesh_5.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr6/mesh_6.jpg" alt=""></p>
             </div>
 
             <div class="col-md-4">
@@ -143,7 +147,7 @@
  			<h3><a href="product-2.html">Вікі-паштоўкі</a></h3>
                 </div>
                 <a href="product-2.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr2/wiki_post_1.JPG" alt="">
                 </a>
             </div>
 
@@ -153,7 +157,7 @@
                 </div>                
 
                 <a href="product-5.html">
-                    <img class="img-responsive" src="http://placehold.it/750x500" alt="">
+                    <img class="img-responsive" src="images/products/pr5/geek_commit_2.JPG" alt="">
                 </a>
             </div>              
 
