--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 </div>                
 
                 <div class="img-prod-container">
-                    <a href="product-15.html"><img class="img-responsive" src="http://via.placeholder.com/750x450" alt=""></a>
+                    <a href="product-15.html"><img class="img-responsive" src="images/products/pr15/8bit_heart_cover.jpg" alt=""></a>
 		    <div class="text1"><p>35 руб.</p></div>
                 </div>
 
