--- a/product-9.html
+++ b/product-9.html
@@ -95,6 +95,7 @@
 		<p><img class="img-responsive" src="images/products/pr9/pi_poster_5.jpg" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr9/pi_poster_2.jpg" alt=""></p>
 		<p><img class="img-responsive" src="images/products/pr9/pi_poster_4.jpg" alt=""></p>
+		<p><img class="img-responsive" src="images/products/pr9/pi_poster_6.jpg" alt=""></p>
             </div>
 
             <div class="col-md-4">
